Added background image interval and used preload instead of directly drawing

--- a/app/views/MainView.html
+++ b/app/views/MainView.html
@@ -6,8 +6,9 @@
                     <i onclick="app.PopupController.performPopup('Settings')"
                         class="pointer fs-3 mdi mdi-cog-outline"></i>
                 </div>
-                <div class="col-3">
-                    <div class="d-inline float-end frosted px-4 py-1 inter fw-semi fs-5 fw-light rounded rounded-pill ">
+                <div class="col-lg-4 col-md-5 col-11">
+                    <div
+                        class="d-inline pointer float-end frosted px-4 py-1 inter fw-semi fs-5 fw-light rounded rounded-pill ">
                         <i class="pe-2 mdi mdi-arrow-right-thick"></i>
                         <span>0 Todos Remaining</span>
                     </div>
@@ -26,7 +27,7 @@
                 <div class="col-2">
 
                 </div>
-                <div class="col-4 mb-3">
+                <div class="col-xl-4 col-lg-5 col-md-7 col-8 mb-3">
                     <h4 class="inter fw-semi text-center" id="quote"></h4>
                     <h5 class="inter fw-semi text-end" id="author"></h5>
                 </div>
@@ -39,7 +40,7 @@
 </div>
 <div class="container-fluid d-none h-100 inter" id="popup">
     <div class="row flex-column justify-content-center align-items-center">
-        <div class="col-3 frosted rounded shadow p-5 popupCard">
+        <div class="col-xxl-3 col-xl-5 col-lg-7 col-md-9 col-11 frosted rounded shadow p-5 popupCard">
             <div class="row" id="popup-content">
 
             </div>
