--- a/app/views/MainView.html
+++ b/app/views/MainView.html
@@ -24,15 +24,14 @@
             </div>
         </div>
         <div class="col-12">
-            <div class="row justify-content-lg-between justify-content-center align-items-end">
-                <div class="order-2 order-lg-1 col-xl-2 col-lg-3 col-3 frosted ms-2 mb-2" id="weather">
-
-                </div>
-                <div class="order-1 order-lg-2 col-xl-4 col-lg-5 col-md-7 col-8 mb-3">
+            <div class="row justify-content-center align-items-end">
+                <div class="col-xl-4 col-lg-5 col-md-7 col-8 mb-1">
                     <h4 class="inter fw-semi text-center" id="quote"></h4>
                     <h5 class="inter fw-semi text-end" id="author"></h5>
                 </div>
-                <div class="order-3 col-xl-2 col-lg-3">
+            </div>
+            <div class="row">
+                <div class="col-xl-2 col-lg-3 col-3 frosted ms-2 mb-2" id="weather">
 
                 </div>
             </div>
